--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
   <body>
 
     <div id="app"></div>
+    <footer class="columns has-text-centered">
+      <a href="https://bulma.io">
+        <img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
+      </a>
+    </footer>
 
     <script src="dist/build.js"></script>
     <!-- GOOGLE ANALYTICS AND FRIENDS -->
