Add favicon using vuejs.org + format html

--- a/index.html
+++ b/index.html
@@ -1,91 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>A curated list of awesome things related to Vue.js base on awesome-vue repository By Irfan Maulana</title>
-	  <meta name="language" content="en-EN" />
-	  <meta name="author" content="Irfan Maulana" />
-	  <link rel="author" href="https://plus.google.com/u/0/+irfanmaulana-mazipan/posts" />
-	  <link rel="publisher" href="https://plus.google.com/u/0/+irfanmaulana-mazipan" />
-
-    <meta name="keywords" content="vue alert, vue2 alert, vue sweatalert, vue simple alert, vue simplert" />
-    <meta name="description" content="A curated list of awesome things related to Vue.js base on awesome-vue repository" />
-
-	  <meta property="og:title" content="Vue 2 Simplert as Plugins | Irfan Maulana" />
-	  <meta property="og:description" content="A curated list of awesome things related to Vue.js base on awesome-vue repository by Irfan Maulana" />
-	  <meta property="og:url" content="https://mazipan.github.io/awesome-vue-list/" />
-	  <meta property="og:site_name" content="awesome-vue-list" />
-	  <meta property="og:type" content="website" />
-
-	  <meta name="twitter:card" content="summary_large_image" />
-	  <meta name="twitter:site" content="@maz_ipan" />
-	  <meta name="twitter:creator" content="@maz_ipan" />
-	  <meta name="twitter:title" content="A curated list of awesome things related to Vue.js base on awesome-vue repository | Irfan Maulana" />
-	  <meta name="twitter:description" content="A curated list of awesome things related to Vue.js base on awesome-vue repository by Irfan Maulana" />
-	  <meta name="twitter:domain" content="https://mazipan.github.io/awesome-vue-list/" />
-	  <link rel="home" href="https://mazipan.github.io/awesome-vue-list/">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.1/css/bulma.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-5442972248172818",
-      enable_page_level_ads: true
-    });
-    </script>
-
-  </head>
-  <body>
-
-    <div id="app"></div>
-    <footer class="columns has-text-centered">
-      <a href="https://bulma.io">
-        <img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
-      </a>
-    </footer>
-
-    <script src="dist/build.js"></script>
-    <!-- GOOGLE ANALYTICS AND FRIENDS -->
-    <script>function _trackLink(e,t,n){t||(t="Link"),n||(n="click"),ga("send",{hitType:"event",eventCategory:t,eventAction:n,eventLabel:e})}!function(e,t,n,a,c,i,o){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,i=t.createElement(n),o=t.getElementsByTagName(n)[0],i.async=1,i.src=a,o.parentNode.insertBefore(i,o)}(window,document,"script","https://www.google-analytics.com/analytics.js","ga"),ga("create","UA-25065548-2","auto"),ga("send","pageview"),window.onload=function(){try{_trackLink("demo awesome-vue-list","demo","visit directly")}catch(e){}};</script>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5442972248172818" data-ad-slot="1487770485" data-ad-format="auto"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    
-    <script type="application/ld+json">{"@context":"http://schema.org","@type":"WebSite","url":"https://www.mazipan.github.io/","name":"Irfan Maulana | Front End Developer","author":"Irfan Maulana","image":"http://mazipan.github.io/images/irfan-maulana.jpg","description":"Irfan Maulana is Front End Developer from Indonesia - Man that craft some code to build a beauty and readable code, experienced in web and desktop technology.","sameAs":["https://www.facebook.com/mazipanneh","https://instagram.com/maz_ipan","https://twitter.com/Maz_Ipan","https://id.linkedin.com/in/irfanmaulanamazipan","https://www.slideshare.net/IrfanMaulana21","https://github.com/mazipan"]}</script> <script type="application/ld+json">{"@context":"http://schema.org","@type":"Person","email":"mailto:mazipanneh@gmail.com","image":"http://mazipan.github.io/images/irfan-maulana.jpg","jobTitle":"Software Engineer","name":"Irfan Maulana","url":"https://www.mazipan.github.io/","sameAs":["https://www.facebook.com/mazipanneh","https://instagram.com/maz_ipan","https://twitter.com/Maz_Ipan","https://id.linkedin.com/in/irfanmaulanamazipan","https://www.slideshare.net/IrfanMaulana21","https://github.com/mazipan"]}</script>
-    <script type="application/ld+json">
-    {
-      "@context": "http://schema.org",
-      "@type": "BreadcrumbList",
-      "itemListElement": [{
-        "@type": "ListItem",
-        "position": 1,
-        "item": {
-          "@id": "http://mazipan.github.io/",
-          "name": "Home",
-          "image": "http://mazipan.github.io/images/irfan-maulana.jpg"
-        }
-      }, {
-        "@type": "ListItem",
-        "position": 2,
-        "item": {
-          "@id": "http://mazipan.github.io/demo/",
-          "name": "Demo",
-          "image": "http://mazipan.github.io/images/irfan-maulana.jpg"
-        }
-      }, {
-        "@type": "ListItem",
-        "position": 3,
-        "item": {
-          "@id": "http://mazipan.github.io/awesome-vue-list",
-          "name": "awesome-vue-list",
-          "image": "https://assets-cdn.github.com/images/icons/emoji/unicode/1f4b2.png"
-        }
-      }]
-    }
-    </script>
-  </body>
+   <head>
+      <title>Awesome Vue List</title>
+      <meta charset="utf-8">
+      <meta name="description" content="A curated list of awesome things related to Vue.js base on awesome-vue repository">
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+      <meta name="language" content="en-EN" />
+      <meta name="author" content="Irfan Maulana" />
+      <link rel="author" href="https://plus.google.com/u/0/+irfanmaulana-mazipan/posts" />
+      <link rel="publisher" href="https://plus.google.com/u/0/+irfanmaulana-mazipan" />
+      <meta property="og:title" content="Awesome Vue List" />
+      <meta property="og:description" content="A curated list of awesome things related to Vue.js base on awesome-vue repository by Irfan Maulana" />
+      <meta property="og:url" content="https://mazipan.github.io/awesome-vue-list/" />
+      <meta property="og:site_name" content="awesome-vue-list" />
+      <meta property="og:type" content="website" />
+      <meta property="og:image" content="https://vuejs.org//images/logo.png">
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:site" content="@maz_ipan" />
+      <meta name="twitter:creator" content="@maz_ipan" />
+      <meta name="twitter:title" content="Awesome Vue List" />
+      <meta name="twitter:description" content="A curated list of awesome things related to Vue.js base on awesome-vue repository by Irfan Maulana" />
+      <meta name="twitter:domain" content="https://mazipan.github.io/awesome-vue-list/" />
+      <meta name="twitter:image" content="https://vuejs.org/images/logo.png">
+      <link rel="apple-touch-icon" sizes="57x57" href="https://vuejs.org/images/icons/apple-icon-57x57.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="https://vuejs.org/images/icons/apple-icon-60x60.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="https://vuejs.org/images/icons/apple-icon-72x72.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="https://vuejs.org/images/icons/apple-icon-76x76.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="https://vuejs.org/images/icons/apple-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="https://vuejs.org/images/icons/apple-icon-120x120.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="https://vuejs.org/images/icons/apple-icon-144x144.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="https://vuejs.org/images/icons/apple-icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="https://vuejs.org/images/icons/apple-icon-180x180.png">
+      <link rel="icon" type="image/png" sizes="192x192" href="https://vuejs.org/images/icons/android-icon-192x192.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="https://vuejs.org/images/icons/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="https://vuejs.org/images/icons/favicon-96x96.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="https://vuejs.org/images/icons/favicon-16x16.png">
+      <meta name="msapplication-TileImage" content="https://vuejs.org/images/icons/ms-icon-144x144.png">
+      <link rel="icon" href="https://vuejs.org/images/logo.png" type="image/png">
+      <meta name="msapplication-TileColor" content="#4fc08d">
+      <meta name="theme-color" content="#4fc08d">
+      <link rel="home" href="https://mazipan.github.io/awesome-vue-list/">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.1/css/bulma.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script>
+         (adsbygoogle = window.adsbygoogle || []).push({
+           google_ad_client: "ca-pub-5442972248172818",
+           enable_page_level_ads: true
+         });
+      </script>
+   </head>
+   <body>
+      <div id="app"></div>
+      <footer class="columns has-text-centered">
+         <a href="https://bulma.io">
+         <img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
+         </a>
+      </footer>
+      <script src="dist/build.js"></script>
+      <!-- GOOGLE ANALYTICS AND FRIENDS -->
+      <script>function _trackLink(e,t,n){t||(t="Link"),n||(n="click"),ga("send",{hitType:"event",eventCategory:t,eventAction:n,eventLabel:e})}!function(e,t,n,a,c,i,o){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,i=t.createElement(n),o=t.getElementsByTagName(n)[0],i.async=1,i.src=a,o.parentNode.insertBefore(i,o)}(window,document,"script","https://www.google-analytics.com/analytics.js","ga"),ga("create","UA-25065548-2","auto"),ga("send","pageview"),window.onload=function(){try{_trackLink("demo awesome-vue-list","demo","visit directly")}catch(e){}};</script>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5442972248172818" data-ad-slot="1487770485" data-ad-format="auto"></ins>
+      <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+      <script type="application/ld+json">{"@context":"http://schema.org","@type":"WebSite","url":"https://www.mazipan.github.io/","name":"Irfan Maulana | Front End Developer","author":"Irfan Maulana","image":"http://mazipan.github.io/images/irfan-maulana.jpg","description":"Irfan Maulana is Front End Developer from Indonesia - Man that craft some code to build a beauty and readable code, experienced in web and desktop technology.","sameAs":["https://www.facebook.com/mazipanneh","https://instagram.com/maz_ipan","https://twitter.com/Maz_Ipan","https://id.linkedin.com/in/irfanmaulanamazipan","https://www.slideshare.net/IrfanMaulana21","https://github.com/mazipan"]}</script> <script type="application/ld+json">{"@context":"http://schema.org","@type":"Person","email":"mailto:mazipanneh@gmail.com","image":"http://mazipan.github.io/images/irfan-maulana.jpg","jobTitle":"Software Engineer","name":"Irfan Maulana","url":"https://www.mazipan.github.io/","sameAs":["https://www.facebook.com/mazipanneh","https://instagram.com/maz_ipan","https://twitter.com/Maz_Ipan","https://id.linkedin.com/in/irfanmaulanamazipan","https://www.slideshare.net/IrfanMaulana21","https://github.com/mazipan"]}</script>
+      <script type="application/ld+json">
+         {
+           "@context": "http://schema.org",
+           "@type": "BreadcrumbList",
+           "itemListElement": [{
+             "@type": "ListItem",
+             "position": 1,
+             "item": {
+               "@id": "http://mazipan.github.io/",
+               "name": "Home",
+               "image": "http://mazipan.github.io/images/irfan-maulana.jpg"
+             }
+           }, {
+             "@type": "ListItem",
+             "position": 2,
+             "item": {
+               "@id": "http://mazipan.github.io/demo/",
+               "name": "Demo",
+               "image": "http://mazipan.github.io/images/irfan-maulana.jpg"
+             }
+           }, {
+             "@type": "ListItem",
+             "position": 3,
+             "item": {
+               "@id": "http://mazipan.github.io/awesome-vue-list",
+               "name": "awesome-vue-list",
+               "image": "https://assets-cdn.github.com/images/icons/emoji/unicode/1f4b2.png"
+             }
+           }]
+         }
+      </script>
+   </body>
 </html>
