--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
       <div id="app"></div>
       <footer class="columns has-text-centered">
         <div class="column">
-          <a href="https://bulma.io">
+          <a href="https://bulma.io" target="_blank">
             <img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
           </a>
+          <br>
+          <small>Copyright © 2017 by <a href="https://github.com/mazipan/" target="_blank">Irfan Maulana</a></small>
         </div>
       </footer>
       <script src="dist/build.js"></script>
