--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
    <head>
       <title>Awesome Vue List</title>
       <meta charset="utf-8">
-      <meta name="description" content="A curated list of awesome things related to Vue.js base on awesome-vue repository">
+      <meta name="description" content="A curated list of awesome things related to Vue.js based on awesome-vue repository">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
       <meta name="language" content="en-EN" />
       <meta name="author" content="Irfan Maulana" />
       <link rel="author" href="https://plus.google.com/u/0/+irfanmaulana-mazipan/posts" />
       <link rel="publisher" href="https://plus.google.com/u/0/+irfanmaulana-mazipan" />
       <meta property="og:title" content="Awesome Vue List" />
-      <meta property="og:description" content="A curated list of awesome things related to Vue.js base on awesome-vue repository by Irfan Maulana" />
+      <meta property="og:description" content="A curated list of awesome things related to Vue.js based on awesome-vue repository by Irfan Maulana" />
       <meta property="og:url" content="https://mazipan.github.io/awesome-vue-list/" />
       <meta property="og:site_name" content="awesome-vue-list" />
       <meta property="og:type" content="website" />
@@ -19,7 +19,7 @@
       <meta name="twitter:site" content="@maz_ipan" />
       <meta name="twitter:creator" content="@maz_ipan" />
       <meta name="twitter:title" content="Awesome Vue List" />
-      <meta name="twitter:description" content="A curated list of awesome things related to Vue.js base on awesome-vue repository by Irfan Maulana" />
+      <meta name="twitter:description" content="A curated list of awesome things related to Vue.js based on awesome-vue repository by Irfan Maulana" />
       <meta name="twitter:domain" content="https://mazipan.github.io/awesome-vue-list/" />
       <meta name="twitter:image" content="https://vuejs.org/images/logo.png">
       <link rel="apple-touch-icon" sizes="57x57" href="https://vuejs.org/images/icons/apple-icon-57x57.png">
